fix label alignment of fair shair budget usage in info box

--- a/css/style.css
+++ b/css/style.css
@@ -623,11 +623,24 @@ input:checked + .slider:before {
 }
 
 .budget-bar-scale {
-  display: flex;
-  justify-content: space-between;
+  position: relative;
+  height: 1.2em;
   font-size: 10px;
   color: var(--text-light);
   margin-top: 4px;
+}
+
+.budget-bar-scale span {
+  position: absolute;
+  transform: translateX(-50%);
+}
+
+.budget-bar-scale span:first-child {
+  transform: translateX(0);
+}
+
+.budget-bar-scale span:last-child {
+  transform: translateX(-100%);
 }
 
 /* Explanation */
